--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,15 @@
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ site.description }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <link rel="stylesheet" href="/css/style.css">
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
+  <meta name="description" content="{{ site.description }}">
+  <meta name="author" content="Brian Zelip">
+  <meta name="keywords" content="WEFT, community radio, 90.1, Champaign, Urbana, Illinois">
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
+  <meta property="og:type" content="radio">
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
+  <meta property="og:image" content="http://weft.org/img/WEFT_Logo_with_mic.jpg">
+  <link rel="canonical" href="{{ site.baseurl }}">
 </head>
