--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,12 @@
           <div class="pure-menu pure-menu-open pure-menu-horizontal">
             <ul>
               <li><a href="index.html">WEFT</a></li>
-              <li><a href="listen.html">Listen Live</a></li>
-              <li><a href="support/">Support WEFT</a></li>
-              <li><a href="spins.html">Recent Spins</a></li>
-              <li><a href="shows.html">Shows</a></li>
-              <li><a href="partners.html">Community Partners</a></li>
-              <li><a href="jobs/">Jobs</a></li>
+              <li><a href="/listen">Listen Live</a></li>
+              <li><a href="/support">Support WEFT</a></li>
+              <li><a href="/spins">Recent Spins</a></li>
+              <li><a href="/shows">Shows</a></li>
+              <li><a href="/partner">Community Partners</a></li>
+              <li><a href="/jobs">Jobs</a></li>
             </ul>
           </div>
         </div>
