--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
               <li><a href="/support">Support WEFT</a></li>
               <li><a href="/spins">Recent Spins</a></li>
               <li><a href="/shows">Shows</a></li>
-              <li><a href="/partner">Community Partners</a></li>
+              <li><a href="/partners">Community Partners</a></li>
               <li><a href="/jobs">Jobs</a></li>
             </ul>
           </div>
