--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="nav">
           <div class="pure-menu pure-menu-open pure-menu-horizontal">
             <ul>
-              <li><a href="/index.html">WEFT</a></li>
+              <li><a href="/">WEFT</a></li>
               <li><a href="/listen">Listen Live</a></li>
               <li><a href="/support">Support WEFT</a></li>
               <li><a href="/spins">Recent Spins</a></li>
