--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-    <footer>
+    <footer class="empty-content-full-height">
       <p>WEFT 90.1 fm  &middot; 113 N Market St, Champaign, IL 61820  &middot; P.O. Box 1223, Champaign, IL 61824  &middot; 217-359-9338  &middot; <a href="mailto:stationmanager@weft.org">StationManager@weft.org</a></p>
       <ul>
         <li><a href="https://twitter.com/WEFTradio"><i class="fa fa-twitter-square"></i> WEFT on Twitter</a></li>
