--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="Lorri Coey">
+    <meta name="author" content="Bob Paleczny">
     <meta name="author" content="Brian Zelip">
     <meta name="keywords" content="WEFT, community radio, 90.1, Champaign, Urbana, Illinois">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
