--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -1,1 +1,3 @@
-<div id="alert" class="alert-box">Our website is undergoing change.&nbsp;&nbsp;Full website coming summer 2014!<a class="close" href="#" title="close this message">[close &times;]</a></div>
+<div id="alert" class="alert-box">
+  Our website is undergoing change.&nbsp;&nbsp;Full website coming summer 2014!<a class="close" href="#" title="close this message">[close &times;]</a>
+</div>
