--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Bree+Serif">
     <link rel="stylesheet" href="/css/style.css">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
