tidy up board mtg info

--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -10,6 +10,6 @@
   <hr>
 
   <p class="aside-text"><strong>WEFT Board meeting</strong><br>June 2, 2014, 7pm</p>
-  <p class="aside-text">The meeting will take place at Champaign Telephone Company (<a href="https://duckduckgo.com/?q=map+1300+S+Neil+St%2C+Champaign">1300 S Neil St, Champaign</a>). Park and enter the building via the south side of the building.</p>
+  <p class="aside-text">The meeting will take place at Champaign Telephone Company (<a href="https://duckduckgo.com/?q=map+1300+S+Neil+St%2C+Champaign">1300 S Neil St, Champaign</a>). There is a parking lot &amp; entrance on the south side of the building.</p>
 
 </aside>
