events & index footer update

--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -19,6 +19,7 @@
 
   <p class="aside-text"><strong>Airshifter Trainings</strong><br>July 1 &amp; 2, 2014, 6pm</p>
   <p class="aside-text">Both airshifter training sessions, along with a <a href="/support/">WEFT membership</a>, are required to have your own show. Trainings take place at WEFT.</p>
+  <p class="aside-text">Get a jump start on becoming an Airshifter by <a href="/downloads/WEFT_Airshifter_Training_Application.pdf">downloading the Airshifter application</a>.</p>
   <p class="aside-text">Email <a href="mailto:airshiftertraining@weft.org">airshiftertraining@weft.org</a> for more info.</p>
 
 </aside>
