--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,7 @@
 
     {{ content }}
 
-    {% include footer.html %}
+    {% include footerWithLove.html %}
     
     {% include analytics.html %}
 
