--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -12,10 +12,10 @@
   <p class="aside-text"><strong>WEFT Board meeting</strong><br>June 2, 2014, 7pm</p>
   <p class="aside-text">The meeting will take place at Champaign Telephone Company (<a href="https://duckduckgo.com/?q=map+1300+S+Neil+St%2C+Champaign">1300 S Neil St, Champaign</a>). There is a parking lot &amp; entrance on the south side of the building.</p>-->
 
-  <p class="aside-text"><strong>WEFT Associates Meeting</strong><br>Wed., June 4, 2014, 7pm</p>
+  <!--<p class="aside-text"><strong>WEFT Associates Meeting</strong><br>Wed., June 4, 2014, 7pm</p>
   <p class="aside-text">The meeting will take place at the Urbana Civic Center (<a href="https://duckduckgo.com/?q=108%20East%20Water%20Street%20Urbana%2C%20IL">108 E Water St.</a>), is free and open to the public.</p>
 
-  <hr>
+  <hr>-->
 
   <p class="aside-text"><strong>Airshifter Trainings</strong><br>July 1 &amp; 2, 2014, 6pm</p>
   <p class="aside-text">Both airshifter training sessions, along with a <a href="/support/">WEFT membership</a>, are required to have your own show. Trainings take place at WEFT.</p>
