--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -17,6 +17,13 @@
 
   <hr>-->
 
+  <p class="aside-text"><strong><a href="http://bluesbrewsandbbqfest.com">Blues Brews &amp; BBQ Festival</a></strong><br>June 27 &amp; 28, 2014</p>
+  <figure>
+    <img src="img/bluesbrewsbbq2014.jpg" alt="Blues Brews &amp; BBQ 2014 poster">
+  </figure>
+
+  <hr>
+  
   <p class="aside-text"><strong>Airshifter Trainings</strong><br>July 1 &amp; 2, 2014, 6pm</p>
   <p class="aside-text">Both airshifter training sessions, along with a <a href="/support/">WEFT membership</a>, are required to have your own show. Trainings take place at WEFT.</p>
   <p class="aside-text">Get a jump start on becoming an Airshifter by <a href="/downloads/WEFT_Airshifter_Training_Application.pdf">downloading the Airshifter application</a>.</p>
