6/30 board meeting add

--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -23,6 +23,11 @@
   </figure>
 
   <hr>
+
+  <p class="aside-text"><strong>WEFT Board meeting</strong><br>June 30, 2014, 7pm</p>
+  <p class="aside-text">The meeting will take place at Champaign Telephone Company (<a href="https://duckduckgo.com/?q=map+1300+S+Neil+St%2C+Champaign">1300 S Neil St, Champaign</a>). The entrance is next to the parking lot on the south side of the building.</p>
+
+  <hr>
   
   <p class="aside-text"><strong>Airshifter Trainings</strong><br>July 1 &amp; 2, 2014, 6pm</p>
   <p class="aside-text">Both airshifter training sessions, along with a <a href="/support/">WEFT membership</a>, are required to have your own show. Trainings take place at WEFT.</p>
