--- a/_includes/sndbx-fullCalendar-head.html
+++ b/_includes/sndbx-fullCalendar-head.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Bree+Serif">
     <link rel="stylesheet" href="/libs/fullcalendar/dist/fullcalendar.css">
     <link rel="stylesheet" href="/css/sandbox/fullCalendar.css">
     <link rel="stylesheet" href="/css/style.css">
